rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__views__cube_rollup_naming_view_members_count_distinct_at_its_grain_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/views.rs
expression: result
---
orders_view__status | orders_view__customers_count
--------------------+-----------------------------
completed           | 3                           
pending             | 2
