rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__views__cube_rollup_naming_view_members_does_not_serve_cube_query.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/views.rs
expression: result
---
orders__status | orders__count | orders__total_amount
---------------+---------------+---------------------
completed      | 5             | 1150.00             
pending        | 3             | 225.00
