rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__views__cube_rollup_naming_view_members_serves_cube_query_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/views.rs
expression: result
---
orders__status | orders__count | orders__total_amount
---------------+---------------+---------------------
completed      | 5             | 1150                
pending        | 3             | 225
