rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__views__view_rollup_is_not_a_candidate.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/views.rs
expression: result
---
orders_view__status | orders_view__created_at_month | orders_view__count | orders_view__total_amount
--------------------+-------------------------------+--------------------+--------------------------
completed           | 2025-03-01 00:00:00           | 5                  | 1150.00                  
pending             | 2025-03-01 00:00:00           | 3                  | 225.00
