rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__views__view_rollup_named_by_id_is_not_a_candidate.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/views.rs
expression: result
---
orders_view__id | orders_view__status | orders_view__total_amount
----------------+---------------------+--------------------------
1               | completed           | 100.00                   
2               | completed           | 200.00                   
3               | pending             | 50.00                    
4               | completed           | 300.00                   
5               | pending             | 100.00                   
6               | completed           | 400.00                   
7               | pending             | 75.00                    
8               | completed           | 150.00
